--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,6 @@ server.port=8085
 spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=Bd_Colegio;encrypt=false
 spring.datasource.username=sa
 spring.datasource.password=1234
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 logging.level.org.hibernate.SQL=debug
 logging.level.org.hibernate.type=trace
